# cudaMinimalTest

./: CMakeLists.txt
src/: cutest.cu  cutest.h  main.cxx
